# obsidian-notebooklm-pipeline

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md  ISSUE_BREAKDOWN.md  PLANS.md
examples/agent_first_engineering_roadmap/: README.md  manual_source_updates.example.json  reading_map.json  recipes.json  roadmap_brief.md  source_index.json
scripts/: run_pipeline.py
src/obsidian_notebooklm_pipeline/: __init__.py  io.py  models.py  recipes.py  run_state.py
src/obsidian_notebooklm_pipeline/stages/: __init__.py  generate.py  pack.py  publish.py  sync.py
tests/: test_pipeline.py
tests/fixtures/: manual_source_updates.json  reading_map.json  recipes.json
tests/fixtures/corpus/notes/: applications.md  foundations.md
tests/fixtures/corpus/reference/: glossary.md  ignored.md
